Update pipeline CI Pipeline 1

--- a/.harness/Pipeline_1.yaml
+++ b/.harness/Pipeline_1.yaml
@@ -35,3 +35,4 @@ pipeline:
                     repo: stevecoccia/myapp:tagname
                     tags:
                       - test_v1
+                    context: .
