--- a/.harness/Pipeline_1.yaml
+++ b/.harness/Pipeline_1.yaml
@@ -31,7 +31,7 @@ pipeline:
                   name: BuildAndPushDockerRegistry_1
                   identifier: BuildAndPushDockerRegistry_1
                   spec:
-                    connectorRef: account.harnessImage
+                    connectorRef: account.DockerHubConnector
                     repo: stevecoccia/myapp:tagname
                     tags:
                       - test_v1
