Update pipeline CI Pipeline 1

--- a/.harness/Pipeline_1.yaml
+++ b/.harness/Pipeline_1.yaml
@@ -36,3 +36,7 @@ pipeline:
                     tags:
                       - test_v1
                     context: .
+                    buildArgs:
+                      GITHUB_TOKEN: ${secrets.getValue("GitHubToken")}
+                    envVariables:
+                      GITHUB_TOKEN: GithubToken
