Update pipeline CI Pipeline 1

--- a/.harness/Pipeline_1.yaml
+++ b/.harness/Pipeline_1.yaml
@@ -32,7 +32,7 @@ pipeline:
                   identifier: BuildAndPushDockerRegistry_1
                   spec:
                     connectorRef: account.DockerHubConnector
-                    repo: stevecoccia/myapp:tagname
+                    repo: stevecoccia/myapp:test_v1
                     tags:
                       - test_v1
                     context: .
